--- a/index.html
+++ b/index.html
@@ -4,27 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" type="text/css" href="style.css"
 </head>
 <body>
-    <div class="header">
-        <div class="logo">
-            Header Logo
-        </div>
+    <div id="hero">
         <nav>
+            <div class="logo">
+                Header Logo
+            </div>
             <ul>
                 <li><a href="#">header link one</a></li>
                 <li><a href="#">header link two</a></li>
                 <li><a href="#">header link three</a></li>
             </ul>
         </nav>
-    </div>
-    <div class="hero">
-        <div class="container">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-            <button>Sign up</button>
+        <div class="content">
+            <div class="container">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button>Sign up</button>
+            </div>
+            <img src="https://loremflickr.com/522/236">
         </div>
-        <img src="https://loremflickr.com/522/236">
     </div>
     <div class="info">
         <h2>Some random infortmation</h2>
@@ -58,7 +59,7 @@
             <button>Sign up</button>
         </div>
     </div>
-    <div class="footer">
+    <div id="footer">
         Copyright &copy; The Odin Project 2021
     </div>
 </body>
