--- a/index.html
+++ b/index.html
@@ -34,31 +34,35 @@
         </div>
     </div>
     <div class="info">
-        <h2>Some random infortmation</h2>
-        <div class="card">
-            <img src="https://loremflickr.com/200/200"> 
-            this is some subtext under an illustration or image
-        </div>
-        <div class="card">
-            <img src="https://loremflickr.com/200/200"> 
-            this is some subtext under an illustration or image
-        </div>
-        <div class="card">
-            <img src="https://loremflickr.com/200/200"> 
-            this is some subtext under an illustration or image
-        </div>
-        <div class="card">
-            <img src="https://loremflickr.com/200/200"> 
-            this is some subtext under an illustration or image
+        <h2>Some random information</h2>
+        <div class="container">
+            <div class="card">
+                <img src="https://loremflickr.com/200/200"> 
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <img src="https://loremflickr.com/200/200"> 
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <img src="https://loremflickr.com/200/200"> 
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <img src="https://loremflickr.com/200/200"> 
+                <p>this is some subtext under an illustration or image</p>
+            </div>
         </div>
     </div>
     <div class="quote">
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <p class="attribution">-Thor, God of Thunder</p>
+        <div class="container">
+            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="attribution">-Thor, God of Thunder</p>
+        </div>
     </div>
     <div class="cta">
         <div class="cta_card">
-            <div class="container">
+            <div class="cta_text">
                 <h3>Call to action! It's time!</h3>
                 <p>Sign up for our product by clicking that button right over there.</p>
             </div>
